Support Java 11+